--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ header .nav {
     right: 0;
     left: 0;
     bottom: 0;
-    background-image: url(../images/photos/3\ -\ Heros.png);
+    background-image: url(../images/photos/3\ -\ Heros.webp);
     background-size: cover; 
     opacity: 50%;
     z-index: 2;
